deploy/destroy as stream with logs
